fixed billed hours and pto hours to align vertically

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
 .textareaStyling2 {
   height: 1000px !important;
 }
+
+#MainBlock {
+  max-width: 1188px !important;
+}
